Fix uneven padding on nsfw-stamp.
Left was 2px right was 4px, changed right to 2px.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4476,6 +4476,7 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 .over18 button { margin: 0 10px 0 10px; padding: 5px}
 
 .entry .buttons li.nsfw-stamp {
+    padding-right: 2px;
     font-size: x-small;
 }
 
